--- a/app/views/merchant/dashboard/index.html.erb
+++ b/app/views/merchant/dashboard/index.html.erb
@@ -2,7 +2,9 @@
 <p><%= @merchant.address %></p>
 <p><%= @merchant.city %> <%= @merchant.state %> <%= @merchant.zip %></p>
 
-<%= link_to 'My Items', '/merchant/items' %>
+<%= link_to 'My Items', '/merchant/items' %><br>
+<%= link_to 'Bulk Discounts', '/merchant/discounts' %>
+
 
 <section class="orders">
   <% @merchant.pending_orders.each do |order| %>
