--- a/app/views/merchant/items/new.html.erb
+++ b/app/views/merchant/items/new.html.erb
@@ -1,4 +1,4 @@
-<h2>Edit Item</h2>
+<h2>New Item</h2>
 <%= form_tag "/merchant/items" do %>
   <%= label_tag :name %>
   <%= text_field_tag :name %>
